cabal-version:   3.14
name:            AStar
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          miniCoded
maintainer:      agbarron20@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable AStar
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, containers, optics
    hs-source-dirs:   app
    default-language: GHC2024
